# text_game_for_toefl

./: .gitignore  ADOPTION_GUIDE.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.codex/: 20_minute_prompt.md
docs/: AI_AGENT_CONTRACT.md  AUTOMATION.md  AUTOMATION_RUNBOOK.md  DECISIONS.md  DOCUMENTATION_AND_DEVELOPMENT_ADDENDUM.md  LANGUAGE_LEARNING_DESIGN.md  OVERVIEW_STRUCTURE_PLAN.md  PLAYTEST_DEBUG_PROTOCOL.md  QUALITY_GATES.md  ROADMAP.md  WORLD_SCHEMA.md
docs/opengame_skills/: README.md  debug_skill.md  template_skill.md
scripts/: continue_codex.sh
src/toefl_rpg/: __init__.py  __main__.py  app.py
src/toefl_rpg/ai/: __init__.py  codex_cli.py  contract.py  drafts.py
src/toefl_rpg/cli/: renderer.py
src/toefl_rpg/content/: __init__.py  importer.py  loader.py  sample_world.py  schema.py
src/toefl_rpg/data/worlds/: biology_realm_01.json
src/toefl_rpg/engine/: __init__.py  actions.py  combat.py  mastery.py  quests.py  rules.py  state.py  storage.py
src/toefl_rpg/language/: __init__.py  feedback.py  parser.py
tests/: test_ai_content_drafts.py  test_ai_contract.py  test_app.py  test_biology_e2e.py  test_biology_world_characterization.py  test_biology_world_pack.py  test_codex_cli_provider.py  test_combat.py  test_feedback.py  test_learner_sentence_corpus.py  test_mastery.py  test_parser.py  test_renderer.py  test_rules.py  test_storage.py  test_vocab_importer.py  test_world_loader.py  test_world_schema.py
tests/fixtures/: learner_sentence_regression.json  review_answer_regression.json
