[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toefl-rpg"
version = "0.1.0"
description = "A CLI text RPG for learning TOEFL vocabulary."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
toefl-rpg = "toefl_rpg.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
